plugins {
    id 'org.springframework.boot' version '3.5.9' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.diffplug.spotless' version '7.0.0.BETA4' apply false
}

allprojects {
    group = 'com.tasteam'
    version = '0.0.1-SNAPSHOT'
    description = 'Demo project for Spring Boot'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'checkstyle'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    jacoco {
        toolVersion = "0.8.11"
    }

    checkstyle {
        toolVersion = "10.12.7"
        configFile = file("$rootDir/config/checkstyle/naver-checkstyle-rules.xml")
        configProperties = [
                suppressionFile: file("$rootDir/config/checkstyle/naver-checkstyle-suppressions.xml"),
        ]
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    spotless {
        java {
            target 'src/**/*.java'
            // Eclipse 버전 명시 (HTTPS 프로토콜 문제 해결)
            eclipse('4.31').configFile(file("$rootDir/config/formatter/naver-eclipse-formatter.xml"))
            importOrder('java', 'javax', 'org', 'net', 'com')
            removeUnusedImports()
        }
    }
}
